package comp24.Simbolos;

public enum TipoDato {
    INT,
    DOUBLE,
    CHAR,
    VOID, 
    BOOL
}
